# crypto-trading-v2

./: .gitignore  Dockerfile  README.md  cloudbuild_dataflow.yaml  cloudbuild_docker.yaml  docker-compose.yaml  main.py  pyproject.toml  setup.py
api/: Dockerfile  app.py  requirements.txt  utils.py
charts/: Dockerfile  package-lock.json  package.json
charts/src/: App.js  config.json  context.js  index.js  utils.js
examples/: 1.basic_pipeline.py  2.dataflow_pipeline.py  3.parallel_pipeline.py
new_pipeline/configs/: config.py
new_pipeline/data/: BTCUSD.rsi-1m-00000-of-00001.txt
new_pipeline/trading_pipeline/: operator.py  source.py
new_pipeline/utils/: pipeline_utils.py  utils.py
pipeline/: build.cloudbuild.yaml  cloudbuild.yaml  config.py  fetch.Dockerfile  fetch.build.cloudbuild.yaml  fetch.json  fetch.py  fetch.run.cloudbuild.yaml  pipeline.py  run.cloudbuild.yaml  setup.py  transform.Dockerfile  transform.build.cloudbuild.yaml  transform.json  transform.py  transform.run.cloudbuild.yaml
pipeline/configs/: config.py
pipeline/steps/: aggregate_candles.py  fetch_candles.py
pipeline/utils/: pipeline_utils.py  utils.py
prod_app/: app.yaml  config.json  main.py  requirements.txt  run_pipeline.py  test.py
prod_app/pipeline/: candles.py
sample/: 1. basic_pipeline.py  2. streaming_pipeline.py  2.dataflow_pipeline.py
trading/: Dockerfile  add.py  app.py  local_run.py  main.py  metadata.json  requirements.txt  setup.py
trading/app/: __init__.py  tasks.py  views.py
trading/configs/: config.py
trading/pipeline/: pipeline.py  source.py  task.py
(+143 files in other folders)
