[tool.poetry]
name = "crypto-trading-v2"
version = "0.1.0"
description = "Dependencies for crypto trading pipeline"
authors = ["darren <darren.the7@gmail.com>"]
readme = "README.md"
packages = [{include = "crypto_trading_v2"}]

[tool.poetry.dependencies]
python = "^3.7"
apache-beam = "2.43.0"
requests = "2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
